// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id       Int       @id @default(autoincrement())
  email    String    @unique
  password String?
  projects Project[]
}

model Project {
  id        Int      @id @default(autoincrement())
  name      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  User      User?    @relation(fields: [userId], references: [id])
  codes     Code[]
  Trash     Trash?   @relation(fields: [trashId], references: [id])
  userId    Int
  trashId   Int?
}

model Code {
  id              Int           @id @default(autoincrement())
  code            String
  projectId       Int
  referenceCodeId Int
  Project         Project?      @relation(fields: [projectId], references: [id])
  ReferenceCode   ReferenceCode @relation(fields: [referenceCodeId], references: [id])
}

model ReferenceCode {
  id            Int        @id @default(autoincrement())
  font          String
  codeReference String
  description   String
  unit          String
  price         Float
  dateReference DateTime
  Categorie     Categories @relation(fields: [categoriesId], references: [id])
  categoriesId  Int
  Code          Code[]
}

model Categories {
  id            Int             @id @default(autoincrement())
  name          String
  ReferenceCode ReferenceCode[]
}

model Trash {
  id       Int       @id @default(autoincrement())
  Projects Project[]
}
