//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String
  projects Project [not null]
}

Table Project {
  id Int [pk, increment]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId Int [not null]
  codes Code [not null]
  Trash Trash
  trashId Int
}

Table Code {
  id Int [pk, increment]
  code String [not null]
  projectId Int [not null]
  referenceCodeId Int [not null]
  Project Project
  ReferenceCode ReferenceCode [not null]
}

Table ReferenceCode {
  id Int [pk, increment]
  font String [not null]
  codeReference String [not null]
  description String [not null]
  unit String [not null]
  price Float [not null]
  dateReference DateTime [not null]
  Categorie Categories [not null]
  categoriesId Int [not null]
  Code Code [not null]
}

Table Categories {
  id Int [pk, increment]
  name String [not null]
  ReferenceCode ReferenceCode [not null]
}

Table Trash {
  id Int [pk, increment]
  Projects Project [not null]
}

Ref: Project.userId > User.id

Ref: Project.trashId > Trash.id

Ref: Code.projectId > Project.id

Ref: Code.referenceCodeId > ReferenceCode.id

Ref: ReferenceCode.categoriesId > Categories.id